fix z-index

--- a/indovinaLaParola.css
+++ b/indovinaLaParola.css
@@ -66,7 +66,7 @@ body {
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
 
-    z-index: 9999;
+    z-index: 2;
 
     opacity: 0;
     visibility: hidden;
@@ -220,7 +220,7 @@ button {
     align-items: center;
     gap: 10px;
 
-    z-index: 1000;
+    z-index: 2;
 }
 
 /* =========================
